Change permalink URL scheme to match existing website - preserves URLs so comments and search still match

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,6 @@ github_username:  gavinb
 # Build settings
 markdown: kramdown
 highlight: pygments
+
+# Match format of existing URLs
+permalink: /:year/:month/:title.html
